Fixed background image spacing

--- a/app/styles/layout/_body.scss
+++ b/app/styles/layout/_body.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    background: black;
+    background: gray;
     background-repeat: no-repeat;
     font-family: $lato;
     background-size: cover;
@@ -16,7 +16,7 @@ body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.85) 15%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 1) 90%);
     background-attachment: fixed;
     margin:0;
-    height: 100vh; // for full browser height and no gradient break
+    height: 120%; // for full browser height and no gradient break
 }
 
 #app {
