--- a/app/styles/layout/_card.scss
+++ b/app/styles/layout/_card.scss
@@ -1,6 +1,7 @@
 /* card */
 .cardcont {
   border-radius: 3px;
+  width: 100%;
   background: rgba(0, 0, 0, 0.85);
 }
 
